--- a/blogpost.html
+++ b/blogpost.html
@@ -10,6 +10,7 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <h1>Aquì tenemos nuestro primer ejemplo </h1>
+    <h1>Aquí vamos hacer un Blog Post. </h1>
+    <p>Este es el parrafo de nuestro proyecto</p>
 </body>
 </html>
