--- a/blogpost.html
+++ b/blogpost.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
-    <link rel="stylesheet" href="css/estilo.css" />
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
-</head>
-<body>
-    <h1>Aquí vamos hacer un Blog Post. </h1>
-    <p>Este es el parrafo de nuestro proyecto</p>
-</body>
+    <head>
+        <title>El titulo del post</title>
+        <link rel="stylesheet" href="css/estilos.css" />
+    </head>
+    <body>
+        <div id="container">
+            <div id="cabecera">
+                Cabecera
+            </div>
+            <div id="post">
+                <h1>Este es el título atractivo e interesante del post</h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+            </div>
+        </div>
+    </body>
 </html>
