--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>El titulo del post</title>
+        <title>Bienvenido a hyperBlog</title>
         <link rel="stylesheet" href="css/estilo.css" />
     </head>
     <body>
